--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -20,3 +20,13 @@ body {
     border: 1px solid black;
     border-radius: .25rem;
 }
+
+#plot1 {
+    margin-left: auto;
+    margin-right: 30px;
+}
+
+#plot2 {
+    margin-left: 30px;
+    margin-right: auto;
+}
